# hft-mvp

./: .env  .gitignore  Cargo.toml  README.md  create_test_model.py  export_features.py  export_scaler.py  fix_ticks_csv.py
backend/: .env  Docker_compose.yml
frontend/: index.html  script.js  style.css
ml/models/: best_model.onnx  scaler.json
ml/notebook/: hft_phase4_v2.ipynb
src/: data.json  lib.rs  main.rs
src/api/: feature_handlers.rs  handlers.rs  mod.rs  signal_handlers.rs
src/features/: calculators.rs  feature_engine.rs  feature_vector.rs  mod.rs  rolling_window.rs
src/market_data/: handler.rs  lob_adapter.rs  mod.rs  tick.rs
src/orderbook/: level.rs  metrics.rs  mod.rs  order_book.rs
src/redis/: mod.rs  redis_client.rs
src/signal_engine/: inference.rs  mod.rs  model_metadata.rs  onnx_loader.rs  prediction.rs  signal_generator.rs
