[package]
name = "hft-sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hft-sim"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
rust_decimal = { version = "1.34", features = ["serde-float"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
rust_decimal_macros = "1.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
