[package]
name = "hft-features"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "hft-features"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
actix-web = "4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
rust_decimal = { version = "1.34", features = ["serde-float"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
rust_decimal_macros = "1.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1